--- a/tinker/templates/creative_tim_sidebar.html
+++ b/tinker/templates/creative_tim_sidebar.html
@@ -83,7 +83,7 @@
                             </li>
                             <li>
                                 <a href="{{ url_for('proof_points.ProofPointsView:index') }}">
-                                    <i class="fa fa-hand-pointer-o" aria-hidden="true"></i>
+                                    <i class="fa fa-hand-o-right" aria-hidden="true"></i>
                                     <p class="admin-list-item">Proof Points</p>
                                 </a>
                             </li>
