redirects to a working page now

--- a/tinker/admin/user_roles/templates/admin_user_bar.html
+++ b/tinker/admin/user_roles/templates/admin_user_bar.html
@@ -1,6 +1,6 @@
 {% extends "tinker_base.html" %}
 
-{% set title = 'Test' %}
+{% set title = 'User Roles' %}
 
 {% block page_title %}Bethel University Tinker{% endblock %}
 
