--- a/tinker/admin/user_roles/templates/user_roles_home.html
+++ b/tinker/admin/user_roles/templates/user_roles_home.html
@@ -8,10 +8,48 @@
     <div class="content">
         <div class="container-fluid">
             <div class="col-md-12">
-                <p class="description">Here is the index page that will route to all admin functionality.</p>
-                    <hr/>
-                <a class="btn btn-primary mr1"  href="{{ url_for('user_roles.UserRolesView:test_roles_and_user') }}">Roles and Users</a>
+                <p>You may choose to view Tinker by viewing as a single role or by viewing as a specific username.</p>
+                <label>
+                    Role
+                    <br />
+                    <select id="role">
+                        {% for role in cascade_md_roles['portal-roles'] %}
+                            <option value="{{ role['value'] }}">{{ role['value'] }}</option>
+                        {% endfor %}
+                    </select>
+                    <a id='view-by-role' class="btn btn-primary admin-viewer">View</a>
+                </label>
+
+                <hr/>
+
+                <label>
+                    Username
+                    <input type="text" id="username">
+                    <a id='view-by-username' class="btn btn-primary admin-viewer">View</a>
+                </label>
             </div>
         </div>
     </div>
+{% endblock %}
+
+{% block scripts %}
+    <script type="text/javascript">
+        $(document).ready(function(){
+            $('.admin-viewer').click(function(){
+                var role = '';
+                var username = '';
+                if( $(this).attr('id') == 'view-by-role')
+                    role = $('#role').val();
+                if( $(this).attr('id') == 'view-by-username')
+                    username = $('#username').val();
+                window.ajax.post('{{ url_for('user_roles.UserRolesView:test_roles_and_users_submit') }}', {'role': role, 'username': username }, function (data) {
+                    if( data == 'error'){
+                        alert('Error (need to write in more robust error notifications)');
+                    } else {
+                        window.location.href = data;
+                    }
+                });
+            })
+        })
+    </script>
 {% endblock %}
