--- a/tinker/admin/proof_points/templates/proof-points-home.html
+++ b/tinker/admin/proof_points/templates/proof-points-home.html
@@ -25,7 +25,7 @@
                             {#                    <input type="text" name="key" id='search-key' class='search-input' placeholder="Filter Key" />#}
                             {# TODO Fix the drop down Layout #}
                                     <select name="key" id="search-key1" class="search-input">
-                                        <option value="">Any</option>
+                                        <option value="">-- Any --</option>
                                         {% for school in schools %}
                                             <option value="{{ school }}">{{ school }}</option>
                                         {% endfor %}
@@ -34,7 +34,7 @@
                                 <div class="proof-dropdown">
                                     <label for="key" style="color: #252422">Owner Name</label>
                                     <select name="key" id="search-key2" class="search-input">
-                                        <option value="">Any</option>
+                                        <option value="">-- Any --</option>
                                         {% for owner in owners %}
                                             <option value="{{ owner }}">{{ owner }}</option>
                                         {% endfor %}
